2011-07-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: version bump to 2.3.8, codename
	"happy mac"

2011-07-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Bottle.cpp: modify Bottle::check
	to accurately predict whether Bottle::find would succeed.

	* src/libYARP_OS/harness/BottleTest.cpp: test whether
	Bottle::check accurately predicts whether Bottle::find will
	succeed.

	* src/libYARP_OS/src/Port.cpp: Don't complain about names
	of ports that don't require a network-reachable address.


	* src/libYARP_OS/include/yarp/os/begin_pack_for_net.h
	* src/libYARP_OS/include/yarp/os/end_pack_for_net.h:
	fix for OSX (__DARWIN__ define is ancient?)
	[thanks Ingo Keller]

2011-07-23 Lorenzo Natale <lorenzo.natale@iit.it>
   * src/libYARP_OS/harness/RateThreadTest.cpp
   * src/libYARP_OS/harness/ThreadTest.cpp
   * src/libYARP_OS/include/yarp/os/impl/ThreadImpl.h
   * src/libYARP_OS/include/yarp/os/RateThread.h
   * src/libYARP_OS/src/RateThread.cpp
   * src/libYARP_OS/src/ThreadImpl.cpp
   
   added non waiting stop request function to RateThread class (askToStop).
   
2011-07-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Port.cpp: report error for port
	names without a leading "/"

	* src/libYARP_OS/harness/PortTest.cpp: check that port
	names without a leading "/" are rejected with an error

	* src/libYARP_dev/src/RemoteControlBoard.cpp: make sure 
	remote_controlboard fails with error if it cannot open
	local ports [thanks Nikolas Hemion]

	* src/libYARP_dev/src/RemoteControlBoard.cpp: bring back
	support for delayed connection to remote controlboard

	* conf/YarpVersion.cmake: bump version number to 2.3.7

2011-07-21 Marco Randazzo    <marco.randazzo@iit.it>

	* src/libYARP_dev/src/ServerControlBoard.cpp
	iControlMode interface is now implemented

	* src/libYARP_dev/src/RemoteControlBoard.cpp
	* src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp