@@ -1,3 +1,11 @@
+2011-07-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/NameServer.cpp: always allocate separate
+	port numbers for separate multicast addresses, some NICs seem
+	to want this.  This was already yarpserver3's behavior, now
+	propagating this to old/classic yarp server [thanks Gauss Lee]
+	[thanks Francesco Nori]
+
 2011-07-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* conf/YarpVersion.cmake: version bump to 2.3.8, codename
